...
    <string name="ad_removePlayList">¿Quiere quitar esta playlist?</string>
    <string name="ad_editNamePlayList">¿Quiere editar el nombre de su playlist?</string>
    <string name="ad_editName">Nuevo nombre</string>
    <string name="ad_title">AVISO</string>
    <string name="ad_yes">SI</string>
    <string name="ad_no">NO</string>
    <string name="cd_navigation_back">Regresar</string>
    <string name="cd_navigation_playlist">Ir a playlist</string>
    <string name="cd_shuffle">Aleatorio</string>
    <string name="cd_repeat">Repetir</string>
    <string name="cd_next">Siguiente</string>
    <string name="cd_previous">Anterior</string>
    <string name="cd_play">Reproducir música</string>
</resources>
